--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.12",
     "gatsby-source-dropbox": "^0.1.1",
+    "gatsby-source-dropbox-paper": "^0.1.0",
     "gatsby-source-filesystem": "^2.1.9",
     "gatsby-transformer-sharp": "^2.2.6",
     "postcss-preset-env": "^6.7.0",
