--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "classnames": "^2.2.6",
+    "dotenv": "^8.1.0",
     "gatsby": "^2.13.67",
+    "gatsby-cli": "^2.7.44",
     "gatsby-image": "^2.2.8",
+    "gatsby-plugin-ffmpeg": "^0.3.1",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-postcss": "^2.1.3",
@@ -16,7 +19,10 @@
     "gatsby-source-dropbox": "^0.1.1",
     "gatsby-source-dropbox-paper": "^0.1.0",
     "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-transformer-ffmpeg": "^0.3.7",
     "gatsby-transformer-sharp": "^2.2.6",
+    "isomorphic-fetch": "^2.2.1",
+    "netlify-lambda": "^1.6.3",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
