--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-postcss": "^2.1.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-remove-fingerprints": "0.0.2",
     "gatsby-plugin-sharp": "^2.2.12",
     "gatsby-source-dropbox": "^0.1.1",
     "gatsby-source-dropbox-paper": "^0.1.0",
