--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-postcss": "^2.1.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-remove-fingerprints": "0.0.2",
     "gatsby-plugin-sharp": "^2.2.12",
+    "gatsby-plugin-tidy": "^1.0.1",
     "gatsby-source-dropbox": "^0.1.1",
     "gatsby-source-dropbox-paper": "^0.1.0",
     "gatsby-source-filesystem": "^2.1.9",
