--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": " npm run build-netlify-functions && gatsby build",
-    "build-netlify-functions": "netlify-lambda build ./src/_netlify-functions",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{css,js,jsx,json,md}\"",
     "start": "npm run develop",
