--- a/v1/package.json
+++ b/v1/package.json
@@ -1,55 +1,38 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "name": "@tinacms/starter",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.19.12",
-    "gatsby-cli": "^2.8.30",
-    "gatsby-image": "^2.2.40",
-    "gatsby-plugin-ffmpeg": "^0.3.1",
-    "gatsby-plugin-manifest": "^2.2.41",
-    "gatsby-plugin-offline": "^2.2.6",
-    "gatsby-plugin-postcss": "^2.1.20",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-plugin-tidy": "^1.0.1",
-    "gatsby-source-dropbox": "^0.1.1",
-    "gatsby-source-dropbox-paper": "^0.1.0",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-ffmpeg": "^0.3.8",
-    "gatsby-transformer-sharp": "^2.3.14",
-    "isomorphic-fetch": "^2.2.1",
-    "netlify-lambda": "^1.6.3",
-    "postcss-preset-env": "^6.7.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+  "private": true,
+  "scripts": {
+    "dev": "yarn tinacms server:start -c \"next dev\"",
+    "build": "yarn tinacms server:start -c \"next build\"",
+    "start": "yarn tinacms server:start -c \"next start\"",
+    "export": "yarn build && next export"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "@tinacms/cli": "^0.53.0",
+    "@types/js-cookie": "^2.2.6",
+    "@types/node": "^13.13.1",
+    "@types/react": "^16.9.43",
+    "@types/styled-components": "^5.1.3",
+    "autoprefixer": "^10.2.6"
   },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby clean && gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{css,js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+  "dependencies": {
+    "@headlessui/react": "^1.3.0",
+    "@tinacms/auth": "^0.50.0",
+    "next": "10.0.5",
+    "next-svgr": "^0.0.2",
+    "next-tinacms-cloudinary": "^3.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-is": "^17.0.2",
+    "react-markdown": "^5.0.3",
+    "react-tinacms-editor": "^0.51.0",
+    "styled-components": "^5.1.3",
+    "styled-jsx": "^3.2.5",
+    "tinacms": "^0.52.0",
+    "typescript": "^3.8.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "resolutions": {
+    "final-form": "4.20.1"
   }
 }
