--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/node": "^13.13.1",
     "@types/react": "^16.9.43",
     "@types/styled-components": "^5.1.3",
-    "autoprefixer": "^10.2.6"
+    "autoprefixer": "^10.2.6",
+    "babel-plugin-styled-components": "^1.13.2"
   },
   "dependencies": {
     "@headlessui/react": "^1.3.0",
