--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.13.1",
     "react-is": "^17.0.2",
     "react-markdown": "^5.0.3",
+    "react-player": "^2.9.0",
     "react-tinacms-editor": "^0.51.0",
     "styled-components": "^5.1.3",
     "styled-jsx": "^3.2.5",
