--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "next": "10.0.5",
     "next-svgr": "^0.0.2",
     "next-tinacms-cloudinary": "^3.1.0",
+    "next-tinacms-github": "^1.1.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^17.0.2",
     "react-markdown": "^5.0.3",
     "react-player": "^2.9.0",
-    "react-tinacms-editor": "^0.51.0",
+    "react-tinacms-github": "^0.50.6",
     "styled-components": "^5.1.3",
     "styled-jsx": "^3.2.5",
     "tinacms": "^0.52.0",
