--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "react-is": "^17.0.2",
     "react-markdown": "^5.0.3",
     "react-player": "^2.9.0",
+    "react-tinacms-editor": "^0.51.6",
     "react-tinacms-github": "^0.50.6",
     "styled-components": "^5.1.3",
     "styled-jsx": "^3.2.5",
-    "tinacms": "^0.52.0",
+    "tinacms": "^0.56.0",
     "typescript": "^3.8.3"
   },
   "resolutions": {
